--- a/recipes/congri.html
+++ b/recipes/congri.html
@@ -7,5 +7,21 @@
     <body>
         <h1>CONGRI</h1>
         <img src="../images/congri.jpg" alt="congri">
+        <h2>Beans, Rice, and Happiness</h2>
+        <p>blah blah blah i love cooking</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>rice</li>
+            <li>beans</li>
+            <li>spices</li>
+            <li>beer</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>heat beans</li>
+            <li>add flavor</li>
+            <li>add rice/water</li>
+            <li>drink beer</li>
+        </ol>
     </body>
 </html>
