--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/congri.html">CONGRI</a>
+        <ul>
+            <li><a href="./recipes/congri.html">CONGRI</a></li>
+            <li><a href="./recipes/hot-dog.html">Hot Dog</a></li>
+            <li><a href="./recipes/carrots.html">Carrots</a></li>
+        </ul>
     </body>
 </html>
